Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114144

qmllint: false positive [read-only-property] with QQmlListProperty

XMLWordPrintable

    • dfa51fe0b (dev), ae018e9a6 (6.6), d3f60adda (6.5)

      When running qmllint on the Qt Quick3D example "customeffects" I got several [read-only-property] when we set values to SceneEnvironment.effects.
      https://doc.qt.io/qt-6/qml-qtquick3d-sceneenvironment.html#effects-prop

      To reproduce just run the linter on this file/project:
      https://code.qt.io/cgit/qt/qtquick3d.git/tree/examples/quick3d/customeffect/main.qml#n184

      And the property is defined here:

      https://code.qt.io/cgit/qt/qtquick3d.git/tree/src/quick3d/qquick3dsceneenvironment_p.h#n66

      It appears to be fine to set the property statically via the component, but if you try and set it to an array in a JS block the linter gets upset and throws the warning.  The above QML file does both.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            janichol Andy Nichols
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes