qmllint: Do not complain about writing to list properties

List properties cannot be read-only.

Pick-to: 6.5
Fixes: QTBUG-114144
Change-Id: Icaf69f581cfb5cdbb75e9b319fcb27b477f241b0
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit dfa51fe0bcc4dafac454791e24e6bb4b919438d7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>